<resources>
    <string name="app_name">食尚男女</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="user_head_change_success">头像设置成功</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title">确定要删除该地址?</string>
    <string name="main_title_address">四川省</string>
    <string name="description">描述</string>
    <string name="main_title_hint">请输入商户名称</string>
    <string name="main_home_menu">首页</string>
    <string name="main_buy_menu">买单</string>
    <string name="cars">购物车</string>
    <string name="main_my_menu">我的</string>
    <string name="get_now_location">正在获取当前位置......</string>
    <string name="user_log_text">登录</string>
    <string name="user_reg_text">注册</string>
    <string name="modify_log_pwd_complete">完成</string>
    <string name="user_name_text">帐号</string>
    <string name="user_name_hint">请输入帐号</string>
    <string name="user_pwd_text">密码</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="user_remember_pwd">记住密码</string>
    <string name="user_automatic_log">自动登录</string>
    <string name="user_log_password_alert">用户名或密码不能为空</string>
    <string name="user_log_bottom_introduction">中佳信网络科技有限公司</string>
    <string name="user_reg_phone">手机号</string>
    <string name="pay_pwd">支付密码</string>
    <string name="pay_new_pwd">请输入新的支付密码</string>
    <string name="pay_new_pwd2">再次输入新支付密码</string>
    <string name="pay_old_pwd">请输入当前支付密码</string>
    <string name="pay_old_pwd_show">当前密码</string>
    <string name="user_reg_phone_hint">输入手机号</string>
    <string name="user_reg_code">验证码</string>
    <string name="user_reg_code_hint">输入验证码</string>
    <string name="user_reg_get_code">获取验证码</string>
    <string name="user_reg_get_code_time">(60)</string>
    <string name="user_reg_password">输入密码</string>
    <string name="input_logpwd">请输入当前登录密码</string>
    <string name="user_reg_password_hint">输入新密码</string>
    <string name="user_reg_confirm_password">确认密码</string>
    <string name="user_reg_confirm_password_hint">确认新密码</string>
    <string name="user_reg_agree_info">注册即视为同意</string>
    <string name="user_reg_xieyi_info">《食尚男女服务协议》</string>
    <string name="user_reg_invitation_code_hint">输入推荐码</string>
    <string name="invitation_code">邀请码</string>
    <string name="invitation_code_1">推荐码</string>
    <string name="invitation_code_scanner">扫描二维码</string>
    <string name="user_reg_new_password">输入新密码</string>
    <string name="confirm_user_reg_new_password">确认新密码</string>
    <string name="user_title_back_text">返回上一页</string>
    <string name="my_user_center">个人中心</string>
    <string name="user_name">周智</string>
    <string name="my_order">我的订单</string>
    <string name="my_merchant_order">商家订单</string>
    <string name="my_merchant_order_1">消费订单</string>
    <string name="my_comment">我的评论</string>
    <string name="user_not_log">登录注册</string>
    <string name="my_house">财务管家</string>
    <string name="my_setting">设置</string>
    <string name="not_log_alert">提示:您还没有登录或注册!</string>
    <string name="not_log_is">是否去登录?</string>
    <string name="refuse_text">残忍拒绝</string>
    <string name="log_reg">登录注册</string>
    <string name="index">首页</string>
    <string name="my_currency">我的食尚币</string>
    <string name="my_currency2">我的食尚币</string>
    <string name="my_currency_money">我的余额</string>
    <string name="my_currency_money2">我的余额</string>
    <string name="my_currency_chongzhi_money">余额充值</string>
    <string name="my_qrcode">我的推荐码</string>
    <string name="recharge">充值</string>
    <string name="recharge_shmoney">食尚币充值</string>
    <string name="recharge_shmoney2">食尚币充值</string>
    <string name="recommend_gift">推荐有礼</string>
    <string name="my_users">我的会员/游客</string>
    <string name="activation">激活</string>
    <string name="my_user_jh">激活（成为会员）</string>
    <string name="recommend_code">推荐码：</string>
    <string name="recomment_invitation_code_hint">请输入邀请码或直接点击扫描</string>
    <string name="recommend_code_scanner">扫描推荐码</string>
    <string name="complete_recommend_code">完成</string>
    <string name="add_user_fid">添加推荐人</string>
    <string name="commodity_type">中餐</string>
    <string name="commodity_nearby">附近</string>
    <string name="commodity_sort">排序</string>
    <string name="recommend">推</string>
    <string name="commodity_name">麻辣豆腐</string>
    <string name="commodity_list_item_fanxian">返利100%</string>
    <string name="commodity_item_consumption_count">累计消费人数:100人</string>
    <string name="commodity_item_character">特色：火锅 辣</string>
    <string name="commodity_item_address">地址：成都市温江</string>
    <string name="commodity_item_address_distance">30km</string>
    <string name="commodity_list_item_type_name">火锅</string>
    <string name="commodity_item_per_capita">人均￥0.00</string>
    <string name="commodity_item_wifi_count">WIFI：开</string>
    <string name="merchant_info_text">商家主页</string>
    <string name="merchant_content_fanxian">返现50%</string>
    <string name="merchant_scroll_liji_jiezhang">立即结账</string>
    <string name="merchant_scroll_roll_call">店名</string>
    <string name="merchant_scroll_test">测试</string>
    <string name="merchant_scroll_person_consumption">人均消费</string>
    <string name="merchant_scroll_mechant_introduction">商家介绍</string>
    <string name="merchant_scroll_mechant_introduction2">光阴故事</string>
    <string name="merchant_scroll_shop_facilitie">店铺设施</string>
    <string name="merchant_scroll_shop_address">店铺地址</string>
    <string name="merchant_scroll_shop_phone">联系电话</string>
    <string name="merchant_scroll_business_hours">营业时间</string>
    <string name="merchant_scroll_fanxian_explain">返现说明</string>
    <string name="comment">评论</string>
    <string name="use_instructions">使用说明</string>
    <string name="add_more">点击查看更多......</string>
    <string name="merchant_info_comment_test">很好吃 下次还要来 地方很好东西也很多 环境非常的不错  哈哈哈哈哈</string>
    <string name="use_instructions_show">您应该阅读全文，特别是，如果您最近才对笔记本电脑产生兴趣或仅仅是一位初学者的话。如果在您第一次阅读后有不懂的地方，请不必担心，将这本说明书放在计算机旁，边用边学。无论您的电脑操作水平如何，请注意被标记的警告和安全信息，同时请注意前言中的安全信息</string>
    <string name="rebate_explain">返利说明：</string>
    <string name="rebate_explain_show1">\t\t消费即可获得10%返现，全场通用。不与店内其他活动同享</string>
    <string name="merchant_introduction_explain">\t\t吃鱼已有千年历史，传统的鱼宴菜式上百种，最初以四大鱼类为原材料，大头鱼、鲢鱼、鲮鱼，随着当地渔业的发展</string>
    <string name="address">地址</string>
    <string name="address_show">九江市市中区</string>
    <string name="navigation">导航</string>
    <string name="call">电话：</string>
    <string name="call_show">028-23798475</string>
    <string name="car_park">停车场</string>
    <string name="all_evaluation">查看全部评价</string>
    <string name="immediate_payment">立即支付</string>
    <string name="evaluation_name_text">小明</string>
    <string name="evaluation_name_date">2015-6-1</string>
    <string name="evaluation_content_text">很好吃，环境很好，菜品非常不错</string>
    <string name="use_rule_text">1、凡注册成为食尚男女的用户，使用食尚男女平台支付全额消费金额，即可获得各商家不等的食尚币返利。食尚币须为整数，返币金额四舍五入。\n2、食尚币不可提现，仅可在食尚商城使用。\n3、食尚币最终解释权归食尚男女平台所有。</string>
    <string name="app_now_banben">当前版本</string>
    <string name="app_now_banben_code">2.0.1</string>
    <string name="app_checkout_btn">检查更新</string>
    <string name="xieyi_shuoming">协议说明</string>
    <string name="setting_guanyu_women">关于我们</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_customer_service">客服热线</string>
    <string name="setting_customer_code">400-012-0012</string>
    <string name="my_order_text">我的订单</string>
    <string name="my_order_all_text">全部</string>
    <string name="my_order_old_comment_text">已评价</string>
    <string name="my_order_not_comment_text">待评价</string>
    <string name="my_order_item_fanli_text">返利20%</string>
    <string name="my_order_item_name">九江鱼庄</string>
    <string name="my_order_item_commodity_money">消费金额：</string>
    <string name="my_order_item_commodity_money_show">298</string>
    <string name="my_order_item_all_comment">用户评价：</string>
    <string name="my_order_item_click_comment">点击评价</string>
    <string name="my_order_evlaution">评价</string>
    <string name="order_evaluation_address">地址：成都市温江区青啤大道28号</string>
    <string name="order_evalaution_texture">菜品口感</string>
    <string name="order_evalaution_service_taidu">服务态度</string>
    <string name="order_evalaution_eat_huanjing">就餐环境</string>
    <string name="order_evalaution_hint">写点什么好？对其他感兴趣的朋友帮助很大哦</string>
    <string name="order_evalaution_alert">限制字数100个</string>
    <string name="sumbit">提\t交</string>
    <string name="my_house_keeper_title">财务小管家</string>
    <string name="my_house_keeper_bill_title">账单</string>
    <string name="my_house_keeper_balance">账户余额</string>
    <string name="my_house_keeper_balance_show">￥32.5</string>
    <string name="my_house_keeper_bank_show">我的银行卡</string>
    <string name="my_house_keeper_bank_numbers">2张</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="fanlimingxi">返利明细:</string>
    <string name="house_order_id">订单号：</string>
    <string name="house_order_id_code">0131 5317 1688</string>
    <string name="house_order_fanli">返利28元</string>
    <string name="house_order_xiaofei">消费:288.00</string>
    <string name="discount_text">优惠券</string>
    <string name="house_order_date">2015-9-19</string>
    <string name="my_bank_text">我的银行卡</string>
    <string name="my_bank_add_text">新增银行卡</string>
    <string name="my_bank_jianshe_text">中国建设银行</string>
    <string name="my_bank_nonghang_text">中国农业银行</string>
    <string name="my_bank_card_text">6222***********3213</string>
    <string name="add_bank_head_text">请绑定持卡人本人的银行卡</string>
    <string name="add_bank_name_text">持卡人姓名</string>
    <string name="add_bank_name_edit">李**</string>
    <string name="card">卡号</string>
    <string name="card_id">6228488339173645</string>
    <string name="next">下一步</string>
    <string name="add_bank_fill_in">填写银行卡资料</string>
    <string name="chose_bank_type">请选择银行卡类型</string>
    <string name="bank_types">卡类型</string>
    <string name="bank_type">广发银行</string>
    <string name="bank_type_info">储蓄卡</string>
    <string name="bank_type_fill_info">请填写银行预留信息</string>
    <string name="name">\t姓名\t</string>
    <string name="name_zhou">周某</string>
    <string name="card_type">证件类型</string>
    <string name="card_edit">身份证</string>
    <string name="card_id_show">证件号</string>
    <string name="card_id_edit">513822199212124345</string>
    <string name="phone">手机号</string>
    <string name="phone_show">请输入银行预留手机号</string>
    <string name="add_bank_xieyi_tongyi">同意</string>
    <string name="yonghu_xieyi">《用户协议》</string>
    <string name="xieyi_ziliao">资料加密处理，仅用于银行处理</string>
    <string name="mall_order_title">兑换订单</string>
    <string name="bindbing_bank">绑定银行卡</string>
    <string name="bindbing_bank_success">绑定成功</string>
    <string name="bank_yue_tixian">余额提现</string>
    <string name="bank_yue_money">金额</string>
    <string name="bank_yue_money_hint">请输入要提现的金额</string>
    <string name="bank_yue_money_info_left">每笔限额5000.00元</string>
    <string name="bank_yue_money_info_right">可提现余额520.00元</string>
    <string name="complete">完成</string>
    <string name="address_management">地址管理</string>
    <string name="main_sign_detail">活动详情</string>
    <string name="main_sign_detail_content">活动内容：凡使用“食尚男女”APP，在签约商户处消费并使用“食尚男女”支付成功，附图评价的用户，即可获得一次抢红包的机会，食尚大礼，食尚币，通通抢回家，食尚商城欢乐购，层层惊喜送不停。</string>
    <string name="main_sign_detail_date">截止时间2015年12月31日。</string>
    <string name="not_sign">不参加</string>
    <string name="main_sign">前往签到</string>
</resources>