<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="50dp"
	android:padding="10dp"
	android:background="@color/main_color16"
    android:orientation="horizontal" >
	<ImageView 
	    android:id="@+id/address_management_back_info_image"
	    android:layout_width="50dp"
	    android:layout_height="20dp"
	    android:src="@drawable/left_white"
	    android:scaleType="fitStart"
	    android:layout_centerVertical="true"
	    android:contentDescription="@string/description"/>
    <TextView 
        android:id="@+id/address_management_info_text"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:layout_centerInParent="true"
	    android:textSize="18sp"
	    android:textColor="@color/white"
	    android:text="@string/address_management"
        />
    <TextView 
        android:id="@+id/address_management_info_complete_text"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:textColor="@color/text_selector_style"
	     android:textSize="16sp"
	     android:visibility="gone"
	    android:layout_alignParentRight="true"
	    android:text="@string/complete"
        />
</RelativeLayout>